# BC_SDL2

./: CMakeLists.txt
sources/: Battlefield.cpp  Bullet.cpp  Events.cpp  HealthBar.cpp  IDestructibleObject.cpp  IShape.cpp  IShootable.cpp  Logics.cpp  ObjectImage.cpp  ObjectManager.cpp  Player.cpp  PlayerAI.cpp  Render.cpp  Tank.cpp  TankControls.cpp  Window.cpp  main.cpp
sources/Include/: Battlefield.hpp  Bullet.hpp  EnumDirectionType.hpp  EnumObjectType.hpp  Events.hpp  HealthBar.hpp  IDestructibleObject.hpp  IDrawable.hpp  IMovableObject.hpp  IShape.hpp  IShootable.hpp  Logics.hpp  ObjectImage.hpp  ObjectsManager.hpp  Player.hpp  PlayerAI.hpp  Render.hpp  Tank.hpp  TankControls.hpp  Timer.hpp  Window.hpp  rectUtils.hpp
